--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation "com.google.firebase:firebase-messaging:17.3.0"
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support:design:28.0.0-rc02'
     implementation 'com.android.support:support-v4:28.0.0-rc02'
@@ -33,3 +35,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-rc02'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
 }
+
+apply plugin: 'com.google.gms.google-services'
