--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service android:name=".MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
 
         <activity android:name=".Loginpage" />
         <activity
@@ -38,7 +37,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".HolidayList" />
         <activity android:name=".BusTimeTable" />
-        <activity android:name=".FeedbackForm"></activity>
+        <activity android:name=".FeedbackForm" />
+        <activity android:name=".MyAccount"></activity>
     </application>
 
 </manifest>
