--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,12 @@
         <activity android:name=".FeedbackForm" />
         <activity android:name=".MyAccount" />
         <activity android:name=".ImportantContacts" />
-        <activity android:name=".SettingsNavBar"></activity>
+        <activity android:name=".SettingsNavBar" />
+        <activity android:name=".AdminMainActivity" />
+        <activity android:name=".AdminNewNotification" />
+        <activity android:name=".AdminOldNotification" />
+        <activity android:name=".AdminNewPoll" />
+        <activity android:name=".AdminOldPoll"></activity>
     </application>
 
 </manifest>
