--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,11 @@
         <activity android:name=".SettingsNavBar" />
         <activity android:name=".AdminMainActivity" />
         <activity android:name=".AdminNewNotification" />
-        <activity android:name=".AdminOldNotification" />
         <activity android:name=".AdminNewPoll" />
-        <activity android:name=".AdminOldPoll"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
