User poll almost done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".SettingsNavBar" />
         <activity android:name=".AdminMainActivity" />
         <activity android:name=".AdminUpdateDriver"/>
+        <activity android:name=".AdminPollResult"/>
         <activity android:name=".AdminNewNotification" />
         <activity android:name=".AdminNewPoll" />
 
